--- a/3rd.html
+++ b/3rd.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <h1>hi mama ki kbr</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est possimus reprehenderit distinctio eveniet
+        exercitationem consequatur, modi enim suscipit inventore non quidem corporis necessitatibus nesciunt delectus
+        earum accusamus labore ullam? Perferendis!</p>
 </body>
 
 </html>
